# bose

./: Cargo.toml  README.md  main
src/: area.rs  areas.rs  constant.rs  geography.rs  lib.rs  main.rs  math.rs  perimeter.rs  physics.rs  statistics.rs  volume.rs
tests/: main.rs
