[package]
name = "bose"
version = "0.1.1"
authors = ["Vikram Tiwari <vikramtheone1@gmail.com>"]
edition = "2018"
description = "A library of formulas"

license-file = "LICENSE"
keywords = ["scientific", "formulas", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
