[package]
name = "bose"
version = "0.1.3"
authors = ["Vikram Tiwari <vikramtheone1@gmail.com>"]
edition = "2018"
description = "A library of formulas"
homepage="https://github.com/vikramtiwari/bose"
repository="https://github.com/vikramtiwari/bose"
license-file = "LICENSE"
keywords = ["scientific", "formulas", "mathematics"]
categories=["science"]
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
